--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,6 +12,10 @@ body{
     background-color: #242526;
 }
 
+body.active-modal {
+    overflow-y:hidden
+}
+
 
 .container {
     max-width: 750px;
@@ -802,7 +806,6 @@ select.active {
     display: flex;
     justify-content: center;
     gap: 3rem;
-    position: relative;
     margin-bottom: 2rem;
 }
 
@@ -815,14 +818,6 @@ select.active {
 }
 
 
-.profile-details ul::after {
-    position: absolute;
-    content: '';
-    bottom: -10px;
-    height: 1px;
-    width: 100%;
-    background: black;
-}
 
 
 .profile-navbar ul,
@@ -889,4 +884,76 @@ select.active {
     width: 100%;
 }
 
+/*Profile Modal*/
 
+
+.profileModal-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(49, 49, 49, 0.4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.profileModal-container {
+    max-width: 800px;
+    width: 100%;
+    background: white;
+    padding: 3rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.profileModal-container h2 {
+    text-align: center;
+}
+
+.profileModal-container form {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 2rem;
+    row-gap: 2rem;
+}
+
+.profileModal-container label {
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+}
+
+.profileModal-container input {
+    border: none;
+    background: lightgrey;
+    border-radius: 5px;
+    padding: 1rem;
+}
+
+.profileModal-container input:focus {
+    outline: none;
+}
+
+.profileModal-container form div{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    display: flex;
+    justify-content: center;
+}
+
+.profileModal-container button {
+    width: 15%;
+    border: none;
+    padding: 1rem;
+    border-radius: 5px;
+    background: #2f8712;
+    cursor:pointer;
+}
+
+.profileModal-container button:hover {
+    background-color:#24ff1c;
+    transition: 0.4s ease-in-out;
+}
