--- a/client/src/App.css
+++ b/client/src/App.css
@@ -195,6 +195,7 @@ body.active-modal {
 
 .navbar-options {
     display: flex;
+    align-items: center;
 }
 
 
@@ -208,30 +209,15 @@ body.active-modal {
     position: relative;
 }
 
-
-.navbar-options a::after{
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    height: 2px;
-    background-color:#24ff1c;
-    width: 0;
-    transition: width ease-in-out 0.3s;
+.navbar-options a img {
+    width: 75px;
+    aspect-ratio: 1 / 1; 
+    border-radius: 50%;
 }
-
-
-.navbar-options a:hover::after {
-    width: 100%;
-}
-
 
 /*Home Page Css*/
 
 
-/* img {
-    max-width: 100%;
-} */
 .wrapper {
     width: 100%;
 }
@@ -324,8 +310,8 @@ body.active-modal {
     padding: 3rem 0;
     margin: 0 3rem;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 25rem);
+    grid-template-columns: repeat(6, 1fr);
+    grid-auto-rows: 15rem;
     gap: 1rem;
 }
 
@@ -337,6 +323,7 @@ body.active-modal {
     align-items: center;
     position: relative;
     cursor: pointer;
+    border-radius: 5px;
     transition: transform 0.2s ease-in-out;
 }
 
