--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,5 @@
+
+
 *{
     padding: 0;
     margin: 0;
@@ -227,145 +229,40 @@ body.active-modal {
 /*Home Page Css*/
 
 .wrapper {
+    margin-top: 1.5rem;
     display: grid;
-    grid-template-columns: 20% 60% 20%;
+    grid-template-columns: 25% 45% 30%;
 }
 
-
+.left_wrapper {    
+    border-style: solid;
+    border-width: 2px;
+    border-color:white;
+    border-left: none;
+}
 
 
 
 /*Group Page*/
 
-
-.group-grid {
-    padding: 3rem 0;
-    margin: 0 3rem;
+.group_wrapper {
+    max-width: 100%;
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-auto-rows: 15rem;
-    gap: 1rem;
 }
 
+.post-group {
+    padding-bottom: 1rem;
+    
+}
+.post-group h2 {
 
-.group-grid div{
+    padding: 1rem 0;
+    color: white;
     background: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: transform 0.2s ease-in-out;
-}
-
-
-.group-grid div:hover {
-    transform: scale(1.03);
-}
-
-
-.group-grid div:nth-child(1)::before {
-    content: "";
-    background-image: url("builder.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
-    opacity: 0.5;
-}
-
-
-.group-grid div:nth-child(2)::before {
-    content: "";
-    background-image: url("power.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
-    opacity: 0.5;
 }
 
 
 
-
-.group-grid div:nth-child(3)::before {
-    content: "";
-    background-image: url("powerbuilder.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
-    opacity: 0.5;
-}
-
-
-.group-grid div:nth-child(4)::before {
-    content: "";
-    background-image: url("cross.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
-    opacity: 0.5;
-}
-
-
-.group-grid div:nth-child(5)::before {
-    content: "";
-    background-image: url("working.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
-    opacity: 0.5;
-}
-
-
-.group-grid div:nth-child(6)::before {
-    content: "";
-    background-image: url("gym.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
-    opacity: 0.5;
-}
-
-
-.group-grid div h2 {
-    color: #fff;
-    position: relative;
-}
-
-
-.footer {
-    grid-template-columns: 1 / span 2;
-}
 
 
 /*Footer Css*/
@@ -881,11 +778,11 @@ select.active {
 /*Friends.js*/
 
  .content-wrapper {
-    width: 100%;
+    margin-inline: auto;
+    max-width: 80%;
     max-height: 40rem;
     display: flex;
     justify-content: center;
-    padding-top: 1rem;
 
  }
 
@@ -893,7 +790,7 @@ select.active {
     width: 100%;
     background:#7c7d7e;
     border-radius: 10px;
-    margin-right: 1rem;
+    /* margin-right: 1rem; */
  }
 
  .friend_header {
@@ -941,3 +838,7 @@ select.active {
     align-items: center;
     cursor: pointer;
 }
+
+/* .slick-slide > div{
+    margin: 0 1rem;
+} */
