--- a/client/src/App.css
+++ b/client/src/App.css
@@ -163,82 +163,115 @@ body.active-modal {
 }
 /*NavBar css*/
 
-
-
-
-
-
 .navbar-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1.5rem 3rem;
+    display: grid;
+    gap: 3rem;
+
 }
 
-
-.navbar-logo a{
-    font-size: 2rem;
-    text-decoration: none;
-}
-
-
-.navbar-logo a span:nth-child(1){
+.navbar-container a:nth-child(1) span:nth-child(1){
     color:#fff;
     font-weight: bold;
+    font-size: 2rem;
    
 }
 
 
-.navbar-logo a span:nth-child(2){
+.navbar-container a:nth-child(1) span:nth-child(2){
     color:#24ff1c;
     font-weight: normal;
+    font-size: 2rem;
 }
 
 
-.navbar-options {
-    display: flex;
-    align-items: center;
-    
-}
-
-
-.navbar-options a{
-    display: block;
-    margin: 0 2.5rem;
-    color: #fff;
+.navbar-container a{
     text-decoration: none;
-    text-align: center;
-    font-size: 1.2rem;
+    color: white;
+    font-size: 1.5rem;
+    margin-left: 2rem;
+    padding: 1.5rem 2rem;
+    border-radius: 100vw 0 0 100vw;
+    transition: all 0.4s ease-in-out;
 }
+
+
+.navbar-container a:hover {
+    background:#242526;
+    position: relative;
+}
+
+.navbar-container a:nth-child(2) span:nth-child(2),
+.navbar-container a:nth-child(3) span:nth-child(2),
+.navbar-container a:nth-child(4) span:nth-child(2),
+.navbar-container a:nth-child(5) span:nth-child(2){
+    padding-left: 1rem;
+}
+
+/* .navbar-container a:before {
+    background:#242526;
+    position: relative;
+}
+
+
+.navbar-container a:hover::before,
+.navbar-container a:hover::after{
+    --border-radius: 2rem;
+
+    content: '';
+    position: absolute;
+    width: var(--border-radius);
+    aspect-ratio: 1/1;
+    right: 0;
+    background: grey;
+  
+}
+
+.navbar-container a:hover::before {
+    top: calc(var(--border-radius) * -1);
+    box-shadow: 10px 10px 0 10px #242526;;
+    border-radius: 0 0 100vw 0;
+}
+
+.navbar-container a:hover::after {
+    bottom: calc(var(--border-radius) * -1);
+    box-shadow: 10px -10px 0 10px #242526;;
+    border-radius: 0 100vw 0 0;
+}
+ */
+
+
 
 .navbar-options a:nth-child(1),
 .navbar-options a:nth-child(2),
-.navbar-options a:nth-child(3){
-    background: rgb(138, 135, 135);
+.navbar-options a:nth-child(3),
+.navbar-options a:nth-child(4){
     padding:.75rem;
     border-radius: 50%;
 }
 
 
-.navbar-options a img {
-    width: 75px;
-    aspect-ratio: 1 / 1; 
-    border-radius: 50%;
-}
 
 /*Home Page Css*/
 
 .wrapper {
-    margin-top: 1.5rem;
     display: grid;
-    grid-template-columns: 25% 45% 30%;
+    grid-template-columns: 20% 55% 25%;
 }
 
 .left_wrapper {    
-    border-style: solid;
-    border-width: 2px;
-    border-color:white;
-    border-left: none;
+    padding-top: 2rem;
+    background:grey;
+    position: sticky;
+    top: 0;
+    max-height: 100svh;
+}
+
+.right_wrapper {
+    padding-top: 2rem;
+}
+
+.middle_wrapper {
+    padding-top: 2rem;
 }
 
 
@@ -251,14 +284,12 @@ body.active-modal {
 }
 
 .post-group {
-    padding-bottom: 1rem;
-    
 }
-.post-group h2 {
 
+.post-group h2 {
     padding: 1rem 0;
+    padding-left: 1rem;
     color: white;
-    background: black;
 }
 
 
