--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,7 +11,11 @@
 
 
 body{
-    background-color: #242526;
+    --primary-color: #004D73;
+    --seconday-color: #f0f0f0;
+    --accent-color: #000000;
+    --second-accent-color: #24ff1c;
+    background-color:var(--seconday-color);
 }
 
 body.active-modal {
@@ -65,8 +69,6 @@ body.active-modal {
 
 
 .signup-container {
-
-
     padding: 1rem;
     display: flex;
     align-items: center;
@@ -164,6 +166,10 @@ body.active-modal {
 /*NavBar css*/
 
 .navbar-container {
+    max-height: 100vh;
+    top: 0;
+    position: sticky;
+    background-color: var(--accent-color);
     display: grid;
     gap: 3rem;
 
@@ -230,25 +236,8 @@ body.active-modal {
 .wrapper {
     --top-of-screen-padding: 2rem;
     display: grid;
-    grid-template-columns: 20% 55% 25%;
+    grid-template-columns: 17.5% 1fr 30%;
 }
-
-.left_wrapper {    
-    padding-top: var(--top-of-screen-padding);
-    background:grey;
-    position: sticky;
-    top: 0;
-    max-height: 100svh;
-}
-
-.right_wrapper {
-    padding-top: var(--top-of-screen-padding);
-}
-
-.middle_wrapper {
-    padding-top: var(--top-of-screen-padding);
-}
-
 
 
 /*Group Page*/
@@ -491,7 +480,7 @@ select.active {
     border-bottom-width: 1px;
     border-bottom-color: white;
     margin-bottom: 2rem;
-    background: #242526;
+    background: var(--seconday-color);
     width: 50%;
 }
 
@@ -516,7 +505,6 @@ select.active {
     display: flex;
     justify-content: space-between;
     padding-top: 0.6rem;
-    color: white;
 }
 
 
@@ -603,7 +591,7 @@ select.active {
     background: none;
     cursor: pointer;
     border:none;
-    color: #fff;
+    color: var(--accent-color);
     font-size: 1rem;
  
 }
@@ -621,7 +609,7 @@ select.active {
 
 .user-likes,
 .post-words {
-    color: white;
+    color: var(--accent-color);
     margin: 0.6rem 0;
 }
 
@@ -639,10 +627,8 @@ select.active {
 
 
 .profile-wrapper{
-    background: white;
-    max-width: 1100px;
-    margin-inline: auto;
-    margin-top: 2rem;
+    display: grid;
+    grid-template-columns: 20% 1fr;
 }
 
 
@@ -866,7 +852,7 @@ select.active {
 
  .content-container {
     width: 100%;
-    background:#7c7d7e;
+    background: var(--secondary-color);
     border-radius: 10px;
     /* margin-right: 1rem; */
  }
@@ -889,15 +875,6 @@ select.active {
     color:#24ff1c;
  }
 
-.friend_header::after {
-    content:"";
-    background: black;
-    width: 100%;
-    height: 1px;
-    bottom: 0;
-    left: 0;
-    position: absolute;
-}
 
 .wrapper_header {
     display: grid;
