--- a/client/src/App.css
+++ b/client/src/App.css
@@ -677,6 +677,11 @@ select.active {
     border-radius: 30vh;
 }
 
+
+.create_post_header div:nth-child(2) input:focus {
+    outline: none;
+}
+
 .create_post_bottom ul{
     list-style: none;
     display: flex;
@@ -872,143 +877,207 @@ select.active {
 
 
 .profile-wrapper{
-    display: grid;
-    grid-template-columns: 20% 1fr;
-}
-
-
-.profile-container {
     display: flex;
-
-
-}
-
-
-.left-container {
     width: 100%;
-    background: grey;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 3rem 0;
+    height: 100%;
 }
-
 
 .profile-container {
-    display: grid;
-}
-
-
-.profile-image {
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    margin: 0 2.5rem;
+    width: 100%;
+    height: 100%;
+}
+
+.image-container {
+    position: relative;
+    height: 30rem;
+    width: 100%;
+}
+
+.image-container img {
+    object-fit: cover;
+    object-position: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.image-container button {
+    right: 0;
+    bottom: 0;
+    margin: 0 2rem 2rem 0;
+    border: none;
+    border-radius: 5px;
+    padding: 0.5rem;
+    background: white;
+    position: absolute;
+    cursor: pointer
+}
+
+.image-container button span:nth-child(1):hover {
+    opacity: .7;
 }
 
 
-.profile-image span {
-    font-size: 1.5rem;
-    font-weight: 600;
+.image-container button span {
+    margin-left: .5rem;
 }
 
-
-.profile-image span,
-.profile-image img,
-.right-header {
-    margin: 0 1.5rem;
+.bottom-container {
+    flex: 1 1 auto;
+    display: grid;
+    grid-template-columns: 25% 1fr;
 }
 
+.person-container {
+    position: relative;
+    padding: 0 1rem;
+}
 
+.about-container {
+    margin-top: 7.5rem;
+    text-align: center;
+}
 
-
-.profile-image img{
-    height: 130px;
-    width: 130px;
+.person-container img {
+    left: 50%;
+    top: -70px;
+    transform: translateX(-50%);
+    object-fit: cover;
+    object-position: center;
+    position: absolute;
     border-radius: 50%;
+    width: 150px;
+    aspect-ratio: 1 / 1;
 }
 
-
-.profile-details ul {
+.numbers-container {
+    list-style: none;
     display: flex;
-    justify-content: center;
-    gap: 3rem;
-    margin-bottom: 2rem;
+    margin-top: 20px;
+    padding: .75rem 0 1rem 0;
+    justify-content: space-evenly;
+    position: relative;
 }
 
-
-.profile-details li {
-    list-style-type: none;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.numbers-container::before {
+    content: '';
+    background: black;
+    height: 1px;
+    width: 80%;
+    position: absolute;
+    bottom: 0;
 }
 
-
-
-
-.profile-navbar ul,
-.profile-photos ul {
-    list-style-type: none;
-}
-
-
-.profile-bio {
-    max-width: 325px;
-}
-
-
-.profile-bio h3{
-    margin-bottom: 0.5rem;
-}
-
-
-.right-container {
+.numbers-container li {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    padding: 1.5rem;
+    text-align: center;
 }
 
+.bio-container ul {
+    list-style: none;
+}
+
+.bio-container p {
+    text-align: center;
+    margin-top: 40px;
+}
+.photo-container {
+    padding: 0 2rem;
+}
 
 .profile-navbar {
     display: flex;
+    padding: 1rem 0;
     justify-content: space-between;
-    margin-bottom: 1.5rem;
+    align-items: center;
 }
 
-
-.nav-btns{
-    display: flex;
-   
-}  
-
-
-.nav-btns button:nth-child(1),
-.nav-btns button:nth-child(2) {
-    border: none;
-    margin-right:0.5rem;
-    margin-bottom: 1rem;
-    padding: 0.7rem;
-    border-radius: 5px;
-    background-color: #24ff1c;
+.profile-navbar ul {
     width: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    list-style: none;
+    cursor: pointer;
+}
+
+.profile-navbar button {
+    border: none;
+    background: var(--second-accent-color);
+    padding: 0.75rem;
+    border-radius: 5px;
     cursor: pointer;
 }
 
 
-.profile-photos ul {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 20rem;
-    column-gap: 0.3rem;
-    row-gap: 0.3rem;
+.profile-navbar button:hover {
+    color: white;
 }
 
+.profile-navbar li:hover {
+    opacity: 0.5;
+}
 
-.profile-photos li img {
+.profile-images ul{
+    max-height: 40rem;
+    display: grid;
+    gap: .1rem;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 25rem;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
+.profile-images li {
+    list-style: none;
+    cursor: pointer;
+}
+
+.profile-images img {
+    /* object-fit: cover; */
+    object-fit: center;
     height: 100%;
     width: 100%;
 }
 
+@media (width < 1550px) {
+    .profile-images ul {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (width < 1175px) {
+    .bottom-container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .profile-images ul {
+        max-height: none;
+        overflow: hidden;
+    }
+
+    .profile-container {
+        margin: 0;
+
+    }
+}
+
+@media (width < 750px) {
+
+    .photo-container {
+        padding: 0;
+    }
+
+    .profile-images ul {
+        grid-template-columns: 1fr;
+        grid-auto-rows: 1fr;
+    }
+    
+}
 /*Profile Modal*/
 
 
@@ -1084,6 +1153,7 @@ select.active {
 }
 
 
+
 /*Friends.js*/
 
     @media (width < 1110px) {
@@ -1097,6 +1167,8 @@ select.active {
  .content-wrapper {
     width: 383px;
     margin-left: 4rem;
+    background: rgba(134, 124, 124, 0.151);
+    border-radius: 10px;
     height: fit-content;
 
  }
