--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,6 +20,10 @@ body{
     background-color:var(--seconday-color);
 }
 
+.dark-mode {
+    background: black;
+}
+
 body.active-modal {
     overflow-y:hidden
 }
@@ -379,6 +383,11 @@ body.active-modal {
         align-items: center;
         flex-direction: row;
         justify-content: space-between;
+    }
+
+    .top-navbar a,
+    .top-navbar button {
+        padding: 0px;
     }
 
     .filter-container {
@@ -1259,20 +1268,20 @@ select.active {
 
 .messages-wrapper {
     display: flex;
-    width: 100vw;
+    max-width: 100vw;
     height: 100vh;
 }
 
 .messages-container {
+    width: 100%;
     position: relative;
     display: flex;
     flex-direction: column;
-    width: 100%;
+    height: 100vh;
     overflow-x: hidden;
 }
 
 .people-container {
-    background: white;
     position: sticky;
     top: 0;
     padding: 1rem;
@@ -1291,18 +1300,31 @@ select.active {
 
 .people-container ul {
     display: flex;
-    width: 100%;
     gap: 5rem;
     overflow-x: auto;
 }
 
-.people-container li {
+.people-container li{
     padding: 1.5rem 0.5rem;
+    list-style: none;
     width:fit-content;
     text-wrap: nowrap;
     display: flex;
     flex-direction: column;
     align-items: center;
+    cursor: pointer;
+}
+
+.people-container a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
+    color: black;
+}
+
+.people-container a:focus img{
+    box-shadow: 0 0 5px var(--second-accent-color);
 }
 
 .people-container li img{
@@ -1312,24 +1334,25 @@ select.active {
     margin-bottom: 0.5rem;
 }
 
-.people-messages {
-    flex: 1 1 auto;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-}
 
 .people-messages-container {
     display: flex;
-    height: 100%;
-    padding: 2rem 0 3rem 0;
+    flex: 1 1 auto;
+    overflow-y: hidden;
+}
+
+.chat-container {
+    width: 100%;
 }
 
 .people-messages-container ul{
-    width: 100%;
-    padding: 1rem 1rem 0;
-    display: grid; 
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-self: flex-end;
+    padding: 1rem;
     gap: 1.25rem;
+    overflow-y: scroll;
 }
 
 .people-messages-container li{
@@ -1383,6 +1406,26 @@ select.active {
     border: none;
     border-radius: 5px;
     background: var(--second-accent-color);
-    padding: .75rem;
+    padding: .75rem 1rem;
     cursor: pointer;
+}
+
+.input-message-container button:hover  {
+    color: white;
+}
+
+@media (width < 550px) {
+    .people-container li span {
+        display: none;
+    }
+}
+
+@media (width < 770px) {
+
+    .chat-container {
+        margin-bottom: 145px;
+    }
+    .people-container li {
+        padding: 0px;
+    }
 }
