--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,21 +12,29 @@
 /*Sign Up Css*/
 
 
+:root {
+    --primary-color: #f0f0f0;
+    --text-color: #000000;
+    --second-accent-color: #24ff1c;    
+}
+
 body{
-    --primary-color: #004D73;
-    --seconday-color: #f0f0f0;
-    --accent-color: #000000;
-    --second-accent-color: #24ff1c;
-    background-color:var(--seconday-color);
+    background-color:var(--primary-color);
 }
 
 .dark-mode {
-    background: black;
+    --primary-color: #141414;
+    --text-color: #ffffff;
+
 }
 
 body.active-modal {
     overflow-y:hidden
 }
+
+
+
+/*Sign Up Css*/
 
 
 .container {
@@ -47,7 +55,7 @@ body.active-modal {
 .logo-container {
     padding: 0 2rem;
     border-radius: 60%;
-    background: #fff;
+    background: var(--primary-color);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -63,7 +71,7 @@ body.active-modal {
 
 
 .logo-container h2 span:nth-child(1){
-    color:black;
+    color:var(--text-color);
    
 }
 
@@ -94,7 +102,7 @@ body.active-modal {
 
 
 .signup-form p {
-    color: #fff;
+    color: var(--text-color);
 }
 
 
@@ -167,7 +175,7 @@ body.active-modal {
 
 
 .login-form p {
-    color: #fff;
+    color: var(--text-color);
 }
 /*NavBar css*/
 
@@ -176,8 +184,8 @@ body.active-modal {
     width: 350px;
     top: 0;
     position: sticky;
-    background: var(--seconday-color);
-    box-shadow: 0 0 1px black;
+    background: var(--primary-color);
+    box-shadow: 0 0 1px var(--text-color);
 }
 
 .navbar-container {
@@ -213,7 +221,7 @@ body.active-modal {
     border-radius: 5px;
     list-style: none;
     text-decoration: none;
-    color: #000000;
+    color: var(--text-color);
     cursor: pointer;
     transition: background-color ease 0.3s,
                 color ease 0.3s;
@@ -223,7 +231,7 @@ body.active-modal {
 .top-navbar button:hover,
 .bottom-navbar button:hover {
     background: var(--second-accent-color);
-    color: #fff;
+    color: var(--primary-color);
 }
 
 
@@ -233,7 +241,7 @@ body.active-modal {
 }
 
 .top-navbar a:nth-child(1) span:nth-child(1) {
-    color: black;  
+    color: var(--text-color);  
 }
 
 .top-navbar a:nth-child(1) span:nth-child(2) {
@@ -303,6 +311,7 @@ body.active-modal {
 
 
 .filter-list li {
+    color: var(--text-color);
     padding: 0.5rem 0.5rem;
     display:flex;
     align-items: center;
@@ -357,7 +366,7 @@ body.active-modal {
     }
 
     .navbar-container {
-        box-shadow: 0 0 1px black;
+        box-shadow: 0 0 1px var(--text-color);
         background: var(--seconday-color);
         display: flex;
         flex-direction: row;
@@ -408,56 +417,6 @@ body.active-modal {
 
 .wrapper {
     display: flex;
-}
-
-
-
-
-/*Group Page*/
-
-.group_wrapper {
-    max-width: 100%;
-    display: grid;
-}
-
-.post-group {
-}
-
-.post-group h2 {
-    padding: 1rem 0;
-    padding-left: 1rem;
-    color: white;
-}
-
-
-
-
-
-/*Footer Css*/
-
-
-.footer-container {
-    background: black;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-}
-
-
-.footer-container section {
-    margin: 2.5rem 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-
-.footer-container section a{
-    text-decoration: none;
-    margin: .7rem 0;
-    color: #fff;
-}
-.footer-container section h2 {
-    color: #24ff1c;
 }
 
 
@@ -639,7 +598,7 @@ select.active {
     min-width: 500px;
     margin: 1rem 0;
     border-radius: 10px;
-    background: rgba(134, 124, 124, 0.151);
+    /* background: rgba(134, 124, 124, 0.151); */
 }
 
 .create_post_container {
@@ -656,7 +615,7 @@ select.active {
 .create_post_header::after {
     content: '';
     position: absolute;
-    background: rgba(134, 124, 124, 0.4);
+    background: var(--text-color);
     width: 95%;
     bottom: 0;
     height: 2px;
@@ -706,7 +665,7 @@ select.active {
 }
 
 .create_post_bottom ul li:nth-child(4) button {
-    color: #fff;
+    color: var(--primary-color);
 }
 
 
@@ -721,7 +680,7 @@ select.active {
 .create_post_bottom button {
     border: none;
     background: none;
-    color: rgba(49, 49, 49, 0.897)
+    color: var(--text-color)
 }
 
 /*Post Css*/
@@ -745,9 +704,9 @@ select.active {
 .post-container {
     border-bottom-style: solid;
     border-bottom-width: 1px;
-    border-bottom-color: white;
+    border-bottom-color: var(--text-color);
     margin-bottom: 2rem;
-    background: var(--seconday-color);
+    background: var(--primary-color);
     width: 100%;
 }
 
@@ -764,7 +723,7 @@ select.active {
     display: flex;
     justify-content:space-between;
     padding: 0.6rem;
-    color: var(--accent-color);
+    color: var(--text-color);
 }
 
 
@@ -850,7 +809,7 @@ select.active {
     background: none;
     cursor: pointer;
     border:none;
-    color: var(--accent-color);
+    color: var(--text-color);
     font-size: 1rem;
  
 }
@@ -868,7 +827,7 @@ select.active {
 
 .user-likes,
 .post-words {
-    color: var(--accent-color);
+    color: var(--text-color);
     margin: 0.6rem 0;
 }
 
@@ -934,6 +893,14 @@ select.active {
     margin-left: .5rem;
 }
 
+
+.person-container,
+.about-container,
+.numbers-container,
+.profile-navbar ul li {
+    color: var(--text-color)
+}
+
 .bottom-container {
     flex: 1 1 auto;
     display: grid;
@@ -973,7 +940,7 @@ select.active {
 
 .numbers-container::before {
     content: '';
-    background: black;
+    background: var(--text-color);
     height: 1px;
     width: 80%;
     position: absolute;
@@ -1015,6 +982,7 @@ select.active {
 
 .profile-navbar button {
     border: none;
+    color: var(--text-color);
     background: var(--second-accent-color);
     padding: 0.75rem;
     border-radius: 5px;
@@ -1023,7 +991,7 @@ select.active {
 
 
 .profile-navbar button:hover {
-    color: white;
+    color: var(--primary-color);
 }
 
 .profile-navbar li:hover {
@@ -1189,7 +1157,7 @@ select.active {
  .content-wrapper {
     width: 383px;
     margin-left: 4rem;
-    background: rgba(134, 124, 124, 0.151);
+    /* background: rgba(134, 124, 124, 0.151); */
     border-radius: 10px;
     height: fit-content;
 
@@ -1202,6 +1170,7 @@ select.active {
  }
 
  .friend_header {
+    color: var(--text-color);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -1210,6 +1179,7 @@ select.active {
  }
 
  .friend_header button {
+    color: var(--text-color);
     border: none;
     background: none;
     cursor: pointer;
@@ -1219,6 +1189,9 @@ select.active {
     color:#24ff1c;
  }
 
+ .friend_wrapper button {
+    color: var(--text-color)
+ }
 
 .wrapper_header {
     display: grid;
@@ -1238,7 +1211,11 @@ select.active {
 
 .wrapper_header button:hover {
     background:var(--second-accent-color);
-    color: #fff;
+    color: var(--primary-color);
+}
+
+.wrapper_header div:nth-child(2) {
+    color: var(--text-color);
 }
 
 .wrapper_header div:nth-child(1) img{
@@ -1287,6 +1264,7 @@ select.active {
     padding: 1rem;
     height: fit-content;
     z-index: 2;
+    box-shadow: 0 0 1px var(--text-color);
 }
 
 .people-container ul::-webkit-scrollbar {
@@ -1320,7 +1298,7 @@ select.active {
     flex-direction: column;
     align-items: center;
     text-decoration: none;
-    color: black;
+    color: var(--text-color);
 }
 
 .people-container a:focus img{
