--- a/client/src/App.css
+++ b/client/src/App.css
@@ -367,7 +367,7 @@ body.active-modal {
 
     .navbar-container {
         box-shadow: 0 0 1px var(--text-color);
-        background: var(--seconday-color);
+        background: var(--primary-color);
         display: flex;
         flex-direction: row;
         position: fixed;
@@ -394,9 +394,10 @@ body.active-modal {
         justify-content: space-between;
     }
 
+
     .top-navbar a,
     .top-navbar button {
-        padding: 0px;
+        padding: 0.1rem;
     }
 
     .filter-container {
@@ -419,177 +420,71 @@ body.active-modal {
     display: flex;
 }
 
-
+.no_overflow {
+    height: 100vh;
+    overflow-y: hidden;
+}
 
 
 /*Create Css*/
 
 
 .create-wrapper {
-    margin-inline: auto;
+    position: absolute;
+    left: 0;
+    top: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: 700px;
-    margin-top: 2rem;
+    background-color: rgba(0,0,0,0.7);
+    height: 100%;
+    width: 100%;
+    z-index: 1;
 }
-
 
 .create-container {
-    background: #fff;
-    margin-inline: auto;
-    width: 100%;
-    border-radius: 10px;
-}
-
-
-#chosen-image {
-    width: 100%;
-    height: 600px;
-    object-fit: cover;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-
-
-.create-header{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    padding: 0.3rem 0;
-}
-
-
-.create-header h1 {
-    font-size: 1.3rem;
-}
-
-
-input[type="file"] {
-    display: none;
-}
-
-
-section.active {
-    display: grid;
-    grid-template-columns: 65% 35%;
-}
-
-
-.image-container div:nth-child(1){
+    width: 450px;
+    height: 550px;
+    background: white;
+    border-radius: 5px;
     display: flex;
     flex-direction: column;
+}
+
+
+.create-header {
+    width: 100%;
+    display: flex;
+    padding: 0.5rem 0;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 0 1px var(--text-color);
+}
+
+.create-header h3 {
+    font-weight: 500;
+}
+
+
+.create-bottom {
+    flex: 1 1 auto;
+    display: flex;
+    justify-content: center;
     align-items: center;
 }
 
 
-#upload-button {
-    background: skyblue;
-    padding: 0.5rem;
-    margin: 0.7rem 0;
+.create-bottom button {
+    border: none;
+    padding: .75rem;
     border-radius: 5px;
+    color: var(--text-color);
+    background: var(--second-accent-color);
     cursor: pointer;
 }
 
-
-.post-button,
-.final-button {
-    position: absolute;
-    right: 0;
-    background: none;
-    border: none;
-    padding-right: 1rem;
-    cursor: pointer;
-    font-weight: bold;
-    color: #498ee3;
-    display: none;
-}
-
-
-.post-button:hover,
-.final-button:hover {
-    color: black;
-}
-
-
-.back-button {
-    background: none;
-    border: none;
-    font-size: 1.5rem;
-    left: 0;
-    position: absolute;
-    padding-left: 1rem;
-    display: none;
-    cursor: pointer;
-}
-
-
-.cancel-button {
-    position: absolute;
-    left: 0;
-    background: none;
-    border: none;
-    padding-left: 1rem;
-    cursor: pointer;
-    font-weight: bold;
-    color: black;
-    display: none;
-}
-
-
-
-
-button.active{
-    display:block
-}
-
-
-label.active {
-    display: none;
-}
-
-
-textarea {
-    display: none;
-}
-
-
-textarea.active {
-    display: block;
-    width: 100%;
-    height: 50%;
-    border: none;
-    border-bottom-right-radius: 10px;
-    resize: none;
-}
-
-
-textarea:focus {
-    outline: none;
-}
-
-
-select {
-   
-    display: none;
-}
-
-
-select:focus {
-    outline: none;
-}
-
-
-select.active {
-    display: block;
-    width: 100%;
-    padding: 0.5rem 0;
-    border-top-width: 1px;
-    border-top-color: black;
-    border-right: none;
-    border-left: none;
-    border-bottom: none;
+.create-bottom button:hover {
+    color: var(--primary-color)
 }
 
 /*Create_Post Css*/
@@ -618,7 +513,7 @@ select.active {
     background: var(--text-color);
     width: 95%;
     bottom: 0;
-    height: 2px;
+    height: 1px;
 }
 
 .create_post_header div:nth-child(1) {
@@ -733,6 +628,9 @@ select.active {
     padding-top: 0.6rem;
 }
 
+.post-caption {
+    margin: 0 0.5rem;
+}
 
 .left-buttons{
     display: flex;
@@ -745,7 +643,7 @@ select.active {
 
 .icon_btn {
     right: 0;
-    z-index: 2;
+    z-index: 0;
     position:absolute;
 }
 
@@ -1049,6 +947,10 @@ select.active {
         padding: 0;
     }
 
+    .profile-navbar {
+        margin-right: 1rem;
+    }
+
     .profile-images ul {
         grid-template-columns: 1fr;
         grid-auto-rows: 1fr;
@@ -1062,6 +964,7 @@ select.active {
         justify-content: center;
         gap: 0.75rem;
         padding: 1rem 0.5rem;
+        margin-right: 0;
     }
 
     .profile-navbar ul{
