--- a/client/src/App.css
+++ b/client/src/App.css
@@ -445,7 +445,7 @@ body.active-modal {
 .create-container {
     width: 450px;
     height: 550px;
-    background: white;
+    background: var(--primary-color);
     border-radius: 5px;
     display: flex;
     flex-direction: column;
@@ -459,10 +459,52 @@ body.active-modal {
     align-items: center;
     justify-content: center;
     box-shadow: 0 0 1px var(--text-color);
+    position: relative;
 }
+
+.create-header button{
+    position: absolute;
+    cursor: pointer;
+}
+
+.create-header button:hover {
+    opacity: 0.5;
+}
+
+.back_button{
+    left: 0;
+    color: var(--text-color);
+    background: none;
+    border: none;
+    padding-left: 1rem;
+}
+
+.foward_button {
+    color: var(--second-accent-color);
+    right: 0;
+    padding-right: 1rem;
+    border: none;
+    background: none;
+}
+
+.create_exit {
+    position:absolute;
+    color: var(--text-color);
+    top: 0;
+    right: 0;
+    background: none;
+    font-size: 2rem;
+    margin: 3rem 3rem 0 0;
+    border: none;
+    cursor:pointer;
+}
+
+
+
 
 .create-header h3 {
     font-weight: 500;
+    color: var(--text-color)
 }
 
 
@@ -474,7 +516,7 @@ body.active-modal {
 }
 
 
-.create-bottom button {
+.create-bottom label {
     border: none;
     padding: .75rem;
     border-radius: 5px;
@@ -483,9 +525,40 @@ body.active-modal {
     cursor: pointer;
 }
 
-.create-bottom button:hover {
+.create-bottom label:hover {
     color: var(--primary-color)
 }
+
+.bottom-default {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.create_default {
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.bottom-default span {
+    font-size: 10rem;
+    color: var(--text-color)
+}
+
+.bottom-default img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-bottom-left-radius:5px ;
+    border-bottom-right-radius:5px ;
+}
+
+
+
 
 /*Create_Post Css*/
 
@@ -577,6 +650,8 @@ body.active-modal {
     background: none;
     color: var(--text-color)
 }
+
+
 
 /*Post Css*/
 
