--- a/client/src/App.css
+++ b/client/src/App.css
@@ -443,14 +443,32 @@ body.active-modal {
 }
 
 .create-container {
-    width: 450px;
     height: 550px;
+    max-width: 600px;
     background: var(--primary-color);
     border-radius: 5px;
     display: flex;
     flex-direction: column;
 }
 
+.right-container {
+    background: var(--primary-color);
+    height: 100%;
+}
+
+
+.caption_holder{
+    resize:none;
+    width: 200px;
+    height: 50%;
+    border: none;
+    background: none;
+    padding: .5rem 0 0 .25rem
+}
+
+.caption_holder:focus {
+    outline:none;
+}
 
 .create-header {
     width: 100%;
@@ -462,16 +480,13 @@ body.active-modal {
     position: relative;
 }
 
-.create-header button{
-    position: absolute;
-    cursor: pointer;
-}
-
 .create-header button:hover {
     opacity: 0.5;
 }
 
 .back_button{
+    position: absolute;
+    cursor: pointer;
     left: 0;
     color: var(--text-color);
     background: none;
@@ -479,13 +494,18 @@ body.active-modal {
     padding-left: 1rem;
 }
 
-.foward_button {
-    color: var(--second-accent-color);
+
+.create_post{
+    position: absolute;
+    cursor: pointer;
     right: 0;
-    padding-right: 1rem;
-    border: none;
+    color: var(--second-accent-color);
     background: none;
+    border: none;
+    padding-right: 1rem;
 }
+
+
 
 .create_exit {
     position:absolute;
@@ -509,10 +529,8 @@ body.active-modal {
 
 
 .create-bottom {
-    flex: 1 1 auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    height: 100%;
+    width: 100%;
 }
 
 
@@ -532,9 +550,20 @@ body.active-modal {
 .bottom-default {
     width: 100%;
     height: 100%;
+    max-height: 509px; 
+    padding: 0 5rem;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center;    
+}
+
+
+.bottom-image {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    max-height: 509px; 
+    padding: 0;
 }
 
 .create_default {
@@ -550,8 +579,17 @@ body.active-modal {
 }
 
 .bottom-default img {
-    width: 100%;
     height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-bottom-left-radius:5px ;
+    border-bottom-right-radius:5px ;
+}
+
+.bottom-image img {
+    height: 100%;
+    width: 100%;
+    max-width: 400px;
     object-fit: cover;
     border-bottom-left-radius:5px ;
     border-bottom-right-radius:5px ;
